<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heyButton"
        android:id="@+id/heyButton"

        android:onClick="myClickHandler"
        ></Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niceButton"
        android:id="@+id/niceButton"

        android:onClick="myClickHandler"
        ></Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memeButton"
        android:id="@+id/memeButton"

        android:onClick="myClickHandler"
        ></Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myButton"
        android:id="@+id/myButton"

        android:onClick="myClickHandler"
        ></Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendButton"
        android:id="@+id/friendButton"

        android:onClick="myClickHandler"
        ></Button>


</LinearLayout>